# VulkanPractice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/sausagetaste/vulkanpractice/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/sausagetaste/vulkanpractice/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/sausagetaste/vulkanpractice/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
apps/: CMakeLists.txt  command_pool.cpp  command_pool.h  data_tensor.h  depth_image.cpp  depth_image.h  fbufmanager.cpp  fbufmanager.h  konst.h  logidevice.cpp  logidevice.h  main.cpp  model_data.cpp  model_data.h  model_render.cpp  model_render.h  physdevice.cpp  physdevice.h  renderpass.cpp  renderpass.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  swapchain_images.cpp  swapchain_images.h  texture.cpp  texture.h  timer.cpp  timer.h  uniform.cpp  uniform.h  util_vulkan.cpp  util_vulkan.h  util_windows.cpp  util_windows.h  vert_data.cpp  vert_data.h  (+9 more)
apps/resource/shader/: triangle.frag
apps/shader/: triangle.vert
resource/image/: 0021di.astc  0021di_128.astc  0021di_16.astc  0021di_256.astc  0021di_32.astc  0021di_512.astc  0021di_64.astc  0021di_8.astc  grass1.astc
resource/model/: irin.dmd  monkey.blend  monkey.dmd  sphere.blend  sphere.dmd  yuri_cso2.dmd
resource/shader/: compile.bat  fillsc.frag  fillsc.vert  fillsc_f.spv  fillsc_v.spv  pbr_lighting.glsl  shadow_map.vert  shadow_map_v.spv  triangle.frag  triangle.vert  triangle_f.spv  triangle_v.spv
script/: compile_shaders.py  count_line_of_code.py
script/local_tools/: path_tools.py
